# SimpleGear

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_asset_models.py
backend/app/: bootstrap.py  config.py  main.py
backend/app/auth/: deps.py  jwt.py
backend/app/models/: __init__.py  asset.py  asset_model.py  assignment.py  audit_log.py  category.py  location.py  maintenance.py  person.py  settings.py  status.py  user.py
backend/app/routers/: activity.py  app_settings.py  assets.py  auth.py  categories.py  dashboard.py  health.py  import_export.py  locations.py  maintenance.py  models.py  people.py  reports.py  search.py  setup.py  statuses.py  users.py
backend/app/schemas/: activity.py  asset.py  asset_model.py  auth.py  category.py  dashboard.py  location.py  maintenance.py  person.py  status.py
backend/app/services/: audit.py  settings_service.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  glasshouse.css  index.css  main.tsx
frontend/src/components/layout/: Layout.tsx  Sidebar.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useTheme.ts
frontend/src/lib/: axios.ts
frontend/src/pages/: AssetDetail.tsx  Assets.tsx  AuditLog.tsx  Dashboard.tsx  Locations.tsx  Login.tsx  Models.tsx  People.tsx  PersonDetail.tsx  Reports.tsx  Search.tsx  Settings.tsx  Setup.tsx
frontend/src/types/: index.ts
(+6 files in other folders)
