[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "simplegear"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "sqlmodel>=0.0.21",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "pydantic-settings>=2.5.0",
    "bcrypt>=4.0.0",
    "cryptography>=42.0.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.12",
    "email-validator>=2.0.0",
    "python-dateutil>=2.9.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
